fix gallery component on mobile device

--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -15,11 +15,19 @@
         }
     }
     &_slide {
-        width: 36rem;
+        width: 16rem;
         height: 100%;
         background-image: url('http://localhost:8888/neptune/wp-content/uploads/2021/01/image.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
+    }
+}
+
+@media all and (min-width: $from-medium) {
+    .gallery {
+        &_slide {
+            width: 36rem;
+        }
     }
 }
